@@ -1,0 +1,34 @@
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
+<fontconfig>
+<!--
+
+Wesnoth's text rendering code is not very well suited to RGB subpixel hinting
+with Pango/Cairo (bug #20337), so we need to disable this feature to avoid
+color glitches in GUI2 dialogs and other places. We also force a uniform
+hintstyle for all platforms while at it.
+
+-->
+
+<match target="font">
+	<edit mode="assign" name="rgba">
+		<const>none</const>
+	</edit>
+</match>
+<match target="font">
+	<edit mode="assign" name="hinting">
+		<bool>true</bool>
+	</edit>
+</match>
+<match target="font">
+	<edit mode="assign" name="hintstyle">
+		<const>hintfull</const>
+	</edit>
+</match>
+<match target="font">
+	<edit mode="assign" name="antialias">
+		<bool>true</bool>
+	</edit>
+</match>
+
+</fontconfig>
