@@ -22,6 +22,9 @@ Version 1.13.0+dev:
    * Fixed minimap buttons appearing without contents or in the wrong state
      during WML start events until they are interacted with or control is given
      to the player for the first time or some other unspecified thing happens.
+   * Force uniform font rendering settings across X11 and Apple OS X, avoiding
+     color glitches resulting from incorrect applications of subpixel hinting
+     (bug #20337).
 
  * Miscellaneous and bug fixes:
    * Fixed a segfault in [move_units_fake]
